# Project-Spark

./: .env.example  .gitignore  .replit  AI_AGENT_IMPLEMENTATION_PLAN.md  AI_AGENT_SECURITY_PROTOCOLS.md  ARCHITECTURAL_REVIEW.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  CODE_AND_FEATURE_DIAGRAM.md  CONNECTION_GUIDE.md  CORS_FIX_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_PACKAGE.md  DISCOVERY_STORE_FILES.txt  EMAIL_VERIFICATION_SETUP.md  FEATURES_GUIDE.md  FINAL_DEPLOYMENT_SUMMARY.md  FIX_REPLIT_SECRETS.md  FIX_REPORT.md  FRONTEND_INTEGRATION.md  GET_STARTED.md  GOOGLE_OAUTH_SETUP.md  HOW_TO_VIEW_DIAGRAMS.md  INTEGRATION_STATUS.md  OPPGRID_ARCHITECTURE_DIAGRAMS.md  PERSONALIZATION_HANDOFF.md  PRODUCTION_TODO.md  PROGRESS_TRACKER.md  PROJECT_PLAN.md  QUICKSTART.md  QUICKSTART_SUPABASE.md  README.md  README_SETUP.md  READY_FOR_REPLIT.md  READY_TO_DEPLOY.md  RENDER_DATABASE_FIX.md  REPLIT_DEPLOYMENT.md  REPLIT_DEPLOYMENT_GUIDE.md  STRATEGIC_ANALYSIS.md  STRIPE_INTEGRATION.md  (+65 more)
.tmp/: _admin_inline.js  data_sources_command_center_spec.md  deepseek_integration_readme.b64  deepseek_main.js  deepseek_share.html  deepseek_share_7hd8_content.json  deepseek_share_9yfkhbrl88rfa7a5mp.json  deepseek_share_content.json  deepseek_share_headers.txt  deepseek_share_je3r.json  deepseek_share_je3r_text.txt  deepseek_share_mb_yn_content.json  deepseek_share_mbynthtml.html  deepseek_share_odfn.html  deepseek_share_odfn_content.json  deepseek_share_odfn_headers.txt  deepseek_share_stripe.json  deepseek_srd89.html  deepseek_srd89_extracted.txt  deepseek_srd89_headers.txt  deepseek_vendors.js  (+8 more)
(+727 files in other folders)
